--- a/admin/config.json
+++ b/admin/config.json
@@ -1,7 +1,7 @@
 { 
-   "owner": "6282347260729",
-   "namabot": "Rimurubotz",
-   "namaowner": "Nayla",
-   "donasi": "https://i.ibb.co/FKY1h8r/qris-saya.png",
+   "owner": "6288980870067",
+   "namabot": "SiestaBotz",
+   "namaowner": "Swift Kawai",
+   "donasi": "https://i.ibb.co/r00S0QJ/20220930-214319.jpg",
    "fakereply": "BOT WHATSAPP 2022"
 }
