--- a/admin/config.json
+++ b/admin/config.json
@@ -1,7 +1,7 @@
 { 
-   "owner": "6288980870067",
-   "namabot": "SiestaBotz",
-   "namaowner": "Swift Kawai",
-   "donasi": "https://i.ibb.co/r00S0QJ/20220930-214319.jpg",
+   "owner": "6283190747399",
+   "namabot": "Paiz-Botz",
+   "namaowner": "Paiz",
+   "donasi": "https://i.ibb.co/5k2QFQm/IMG-20221010-WA0591.jpg",
    "fakereply": "BOT WHATSAPP 2022"
 }
